# stelp

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  starlark_dialect_spec.md  test_include_manually.sh
design/: structured_data.md
examples/: constants.star  helpers.star  include_usage.md  log_processor.star  multiline_demo.py  multiline_examples.md  timestamp_processing.star
src/: builtins.rs  chunking.rs  colors.rs  error.rs  flatten.rs  input_format.rs  lib.rs  log_format_processor.rs  main.rs  output_format.rs  pattern_extraction.rs  pipeline.rs  prelude.star  tty.rs  variables.rs
src/formatters/: logfmt.rs  mod.rs
src/pipeline/: config.rs  context.rs  glob_dict.rs  global_functions.rs  levelmap.rs  meta.rs  processors.rs  simple_globals.rs  stream.rs
src/processors/: mod.rs  window.rs
tests/: argument_order_tests.rs  basic_pipeline_tests.rs  chunking_tests.rs  commit1_test.rs  data_mode_tests.rs  flatten_integration_tests.rs  glob_dictionary_test.rs  global_namespace_test.rs  include_tests.rs  integration_examples.rs.disabled  integration_global_namespace.rs  integration_tests.rs  keys_option_tests.rs  level_filter_tests.rs  log_format_tests.rs.disabled  logfmt_output_tests.rs  meta_syntax_tests.rs  minimal_working_test.rs  multiline_integration_tests.rs  parser_tests.rs  prelude_tests.rs  print_function_test.rs  readme_smoke_test.rs  simple_glob_test.rs  unix_integration_tests.rs  window_tests.rs
