[package]
name = "stelp"
version = "0.4.0"
edition = "2021"
description = "A high-performance CLI tool that processes stdin line-by-line using Starlark scripts (Starlark Event and Line Processor)"
authors = ["Dirk Loss <mail@dirk-loss.de>"]
license = "MIT"

[[bin]]
name = "stelp"
path = "src/main.rs"

[dependencies]
starlark = "0.13"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10"
csv = "1.3"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"