[package]
name = "stelp"
version = "0.11.0"
edition = "2021"
description = "A CLI tool that processes text using Starlark scripts (Starlark Event and Line Processor)"
authors = ["Dirk Loss <mail@dirk-loss.de>"]
license = "MIT"

[[bin]]
name = "stelp"
path = "src/main.rs"

[dependencies]
starlark = "0.13"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "1.0"
regex = "1.10"
csv = "1.3"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dateparser = "0.2"
humantime = "2.2.0"
is-terminal = "0.4"
once_cell = "1.19"
terminal_size = "0.3"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"